[gd_scene format=3 uid="uid://brryf54mqxwqa"]

[ext_resource type="Script" uid="uid://wx1shnwy7u8i" path="res://splore_importer.gd" id="1_editor"]
[ext_resource type="FontFile" uid="uid://btr5i3t6k3xdx" path="res://assets/font/NotoEmoji-Regular.ttf" id="2_emoji"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_opaque"]
bg_color = Color(0.1, 0.1, 0.1, 1)

[sub_resource type="FontVariation" id="FontVariation_default"]

[sub_resource type="FontVariation" id="FontVariation_emoji_offset"]
base_font = ExtResource("2_emoji")
baseline_offset = -0.16

[sub_resource type="FontVariation" id="FontVariation_bqpnx"]
fallbacks = Array[Font]([SubResource("FontVariation_emoji_offset")])
base_font = SubResource("FontVariation_default")
spacing_space = -4

[node name="SploreImporter" type="CanvasLayer" unique_id=1922155292]
layer = 15
script = ExtResource("1_editor")

[node name="Panel" type="Panel" parent="." unique_id=1747027266]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_opaque")

[node name="BackgroundArt" type="TextureRect" parent="Panel" unique_id=2020202020]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.50980395)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 3
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="Panel" unique_id=1264544537]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer" unique_id=9579691]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBox" unique_id=542588281]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="Panel/MarginContainer/VBox/Header" unique_id=463415509]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("FontVariation_bqpnx")
theme_override_font_sizes/font_size = 16
text = "üåê Import from BBS"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBox" unique_id=1083263750]
layout_mode = 2

[node name="SearchContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBox" unique_id=1691524185]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="LabelUser" type="Label" parent="Panel/MarginContainer/VBox/SearchContainer" unique_id=1585851666]
unique_name_in_owner = true
layout_mode = 2
text = "User:"
vertical_alignment = 1

[node name="InputUsername" type="LineEdit" parent="Panel/MarginContainer/VBox/SearchContainer" unique_id=987654321]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Username"

[node name="OptionType" type="OptionButton" parent="Panel/MarginContainer/VBox/SearchContainer" unique_id=44846579]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "‚≠ê"
popup/item_0/id = 0
popup/item_1/text = "üíó"
popup/item_1/id = 1
popup/item_2/text = "üëæ"
popup/item_2/id = 2

[node name="BtnSearch" type="Button" parent="Panel/MarginContainer/VBox/SearchContainer" unique_id=599435137]
unique_name_in_owner = true
custom_minimum_size = Vector2(45, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_bqpnx")
text = "üîç"

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBox" unique_id=123456789]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBox" unique_id=1848395223]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ListContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBox/ScrollContainer" unique_id=786596169]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBox" unique_id=1848119324]
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="Panel/MarginContainer/VBox" unique_id=2134186056]
layout_mode = 2
alignment = 1

[node name="BtnClose" type="Button" parent="Panel/MarginContainer/VBox/Footer" unique_id=314931133]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_bqpnx")
text = "‚úñ Close"

[node name="Control" type="Control" parent="Panel/MarginContainer/VBox/Footer" unique_id=1905794488]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="BtnImportSelected" type="Button" parent="Panel/MarginContainer/VBox/Footer" unique_id=57242822]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_bqpnx")
text = "ÔøΩ Import Selected"

[node name="SploreRequest" type="HTTPRequest" parent="." unique_id=748392105]
